unpackaged/objects/Source_Record__c.object
<CustomObject>
  <description>Includes Accounts from different sources mapped to one golden account. Fully integrated ( Read Only for all users)</description>
  <fields>
    <fullName>Atlantis_Web_Order_Customer__c</fullName>
    <description>Shows the Atlantis Web Order customer Number from ERP. Temporary solution until AWO is included as own source record.</description>
    <label>Atlantis Web Order Customer</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CIM_Account__c</fullName>
    <label>CIM Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Source Records</relationshipLabel>
    <relationshipName>Source_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>CombinedFieldsSureSmile__c</fullName>
    <description>Display Practice Id for Source records SureSmile</description>
    <formula>IF ( PracticeSiteId__c="","",IF(TEXT(Source_Id__c)="","Err:Blank Source Id",Case(Text(Source_Id__c),"63","CRM Data","7","BPCS","1","M3","30","Distributors","62","Ecommerce","2","AX","31","SAP","60","SFDC","Other")&amp;" | "&amp;PracticeSiteId__c&amp;" | "&amp;Name))</formula>
    <label>Combined Fields SureSmile</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Combined_Fields__c</fullName>
    <description>To concatenate values from the source record to display in the Service cloud</description>
    <formula>IF(TEXT(Source_Id__c)="","Err:Blank Source ID",Case(Text(Source_Id__c),"63","CRM Data","7","BPCS","1","M3","30","Distributors","62","Ecommerce","2","AX","31","SAP","60","SFDC","Other")&amp;" | "&amp;Customer_Id__c&amp;" | "&amp;Name)</formula>
    <label>Combined Fields</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Location_Id__c</fullName>
    <label>Location Id</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PaymentTermsDescription__c</fullName>
    <description>Text Description of Payment Terms Code from ERP</description>
    <label>Payment Terms Description</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PaymentTerms__c</fullName>
    <description>Payment Terms Code from ERP</description>
    <label>Payment Terms</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PracticeHRID__c</fullName>
    <description>PracticeHRID of a SueSmile Account</description>
    <label>Practice HRID</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PracticeID__c</fullName>
    <description>PracticeID of a SureSmile account</description>
    <label>Practice ID</label>
    <length>40</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PracticeSiteId__c</fullName>
    <description>SureSmile Practice Site ID</description>
    <inlineHelpText>SureSmile Practice Site ID</inlineHelpText>
    <label>Practice Site Id</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Price_Group__c</fullName>
    <label>Price Group</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SearchInfo__c</fullName>
    <description>TFUS-000002577 Used in search layout as secondary field for additional information in lookup fields</description>
    <formula>Case(
    Text(Source_Id__c),
        "1","M3",
        "2","AX",
        "3","SAP",
        "4","SAP",
        "7","BPCS",
        "30","Distributors",
        "31","SAP",
        "33","AX",
        "60","SFDC",
        "62","Ecommerce",
        "63","CRM Data",
        "64","Siroforce",
        "Other"
)
&amp;" • "&amp;Company_Code__c
&amp;" • "&amp;Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Info</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Source_Address__c</fullName>
    <description>Address of the source record in CIM</description>
    <label>Source Address</label>
    <length>900</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Source_Id__c</fullName>
    <label>Source Id</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>63</fullName>
          <label>CRM Data, External CRM Data</label>
        </value>
        <value>
          <fullName>7</fullName>
          <label>BPCS</label>
        </value>
        <value>
          <fullName>1</fullName>
          <label>M3</label>
        </value>
        <value>
          <fullName>30</fullName>
          <label>Distributors</label>
        </value>
        <value>
          <fullName>62</fullName>
          <label>Ecommerce</label>
        </value>
        <value>
          <fullName>2</fullName>
          <label>AX</label>
        </value>
        <value>
          <fullName>31</fullName>
          <label>SAP</label>
        </value>
        <value>
          <fullName>60</fullName>
          <label>SFDC</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SuresmileAdvancedPlatform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Advanced</description>
    <inlineHelpText>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Advanced</inlineHelpText>
    <label>Suresmile Advanced Platform</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SuresmileAlignerPlatform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Aligner</description>
    <inlineHelpText>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Aligner</inlineHelpText>
    <label>Suresmile Aligner Platform</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SuresmileOrthoPlatform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Ortho</description>
    <inlineHelpText>Information collected from Customer Interfaces table in AX (related table to Accounts) - set to true if an active record exists as Suresmile Ortho</inlineHelpText>
    <label>Suresmile Ortho Platform</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Unique_Source_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Source Record Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <label>Source Record</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <label>Account Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Source Records</pluralLabel>
  <recordTypes>
    <active>true</active>
    <fullName>Source_Record</fullName>
    <label>Source Record</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>